NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.3.0
- NEW : Search for images in the admin tab
- NEW : Add new gallery also in manage tab
- NEW : AJAX support for Imagebrowser and gallery navigation (THX to Anty)
- NEW : Added zip upload via URL (THX to Juan Jose Galvez)
- Added : jQuery Multiple File Upload Plugin v1.44
- Added : SWFUpload V2.2.0
- Bugfix : Correct various PHP notice messages
- Bugfix : Typo fix in custom fields for ngg_gal_ImageBrowser
- Bugfix : Avoid upload of images in gallery without correct capability  

V1.2.1 - 22.03.2009
- NEW : Support for IE8 Web Slices in widgets
- NEW : Add filter ngg_image_object
- Changed : Descending order in add gallery menu
- Bugfix : Exclude option didnT work for multi pages
- Bugfix : Check for correct capability in manage gallery

V1.2.0 - 09.03.2009
- NEW : Support for image tag cloud with shortcode [tagcloud]
- NEW : Adding shortcode [recent max="7" template="filename" /] & [random max="7" template="filename" /] to show the most recent/random pictures (THX to Bernhard)
- NEW : Crop thumbnails manually (THX to Simone Fumagalli)
- NEW : Support for i18n with polyglot or qtrans plugin (THX to Boris Glumpler)
- NEW : Canonical meta link support
- Added : SWFUpload V2.2.0 B5
- Added : New memory limit check in upload screen
- Bugfix : Language typo fixes
- Bugfix : Admin Pagination fix
- Bugfix : Typo fix in widgets
- Bugfix : Init column script after document is ready
- Bugfix : htmlspecialchars() instead htmlentities() for links in the a href title description
- Bugfix : Upgrade routine didn't add sortorder to correct table (THX to Uwe)
- Bugfix : Correct shotcode in media upload tab

V1.1.0 - 26.01.2009
- NEW : Pagination for album page via custom fields ('ngg_paged_Galleries')
- NEW : Support for fixed number of columns inside the gallery
- NEW : Added pagination for galleries and images in admin section
- NEW : New action hook after image is added to database, called 'ngg_added_new_image' 